manifests/homelab/argocd/Ingress-argocd-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/funnel: "true"
  name: argocd-webhook
  namespace: argocd
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /api/webhook
            pathType: Prefix
  tls:
    - hosts:
        - argocd-webhook
